--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  height: 100%;
+}
+
+body {
+  margin: 2rem;
+  font-family: 'Gaegu', cursive;
+  background-color: var(--color-light);
+  color: var(--color-dark);
+}
+
+:root {
+  --color-primary: #1fb6ff;
+  --color-primary-text: #273444;
+  --color-primary-hover: #218fc7;
+  --color-dark: #273444;
+  --color-dark-hover: #1b222a;
+  --color-light: #ffffff;
+  --color-light-hover: #ffffff;
+  --color-danger: #dc2626;
+  --color-danger-hover: #991b1b;
+  --color-card-background: #151c25;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  margin: 0;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 800;
+}
+
+p,
+span {
+  font-weight: 500;
 }
