--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,14 @@ span {
   font-weight: 500;
 }
 
+main {
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+
 .hangman-side {
   width: 35vw;
 }
