add top and padding to modal

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,6 +1,8 @@
 .modal {
     position: absolute;
+    top: 0;
     backdrop-filter: blur(5px);
+    padding: 20px;
     filter: drop-shadow(0 10px black); 
     display: flex;
     flex-direction: column;
