--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     backdrop-filter: blur(5px);
-    padding: 20px;
+    padding: 30px 50px;
     filter: drop-shadow(0 10px black); 
     display: flex;
     flex-direction: column;
@@ -11,5 +11,5 @@
 
 .modal__container {
     position: absolute;
-    top: 40%
+    top: 30%
 }
