--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -11,5 +11,11 @@
 
 .modal__container {
     position: absolute;
-    top: 25%
+    top: 25%;
+    width: 80%;
+}
+
+.modal__text {
+    font-size: 2.5rem;
+    text-align: center;
 }
