--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -13,6 +13,9 @@
     position: absolute;
     top: 25%;
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
 }
 
 .modal__text {
